lab/account/beta-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: account
    owner: tonyhhyip
    stage: beta
  name: account-manager-beta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account
      owner: tonyhhyip
      stage: beta
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: account
        owner: tonyhhyip
        stage: beta
    spec:
      containers:
      - image: ysitd/cloud-account-sidecar:latest
        imagePullPolicy: Always
        name: renderer
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 64Mi
        ports:
          - name: sidecar
            containerPort: 8080
            protocol: TCP
      - env:
        - name: DUMMY
          value: foo
        - name: GIN_MODE
          value: debug
        - name: SIDECAR_URL
          value: http://localhost:8080
        - name: LISTEN_PORT
          value: "80"
        - name: CERT_PATH
          value: /cert/grpc/account
        - name: DB_URL
          valueFrom:
            secretKeyRef:
              key: dbUrl
              name: account-db
        - name: REDIS_ADDRESS
          value: account-redis.lab:6379
        - name: REDIS_DB
          value: "1"
        - name: SESSION_NAME
          value: ysitd
        image: ysitd/cloud-account:1.8-dev
        imagePullPolicy: Always
        name: account-manager
        ports:
          - containerPort: 80
            protocol: TCP
            name: http
          - containerPort: 50050
            protocol: TCP
            name: internal
          - containerPort: 50051
            protocol: TCP
            name: grpc
        resources:
          limits:
            cpu: 100m
            memory: 8Mi
          requests:
            cpu: 10m
            memory: 4Mi
