lab/account/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: account-manager
  labels:
    app: account
    owner: tonyhhyip
    dummy: "1"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: account
        owner: tonyhhyip
    spec:
      containers:
        - name: account-manager
          image: ysitd/cloud-account:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
