lab/account/beta-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: account
    owner: tonyhhyip
    stage: beta
  name: account-manager-beta
spec:
  ports:
  - name: account
    port: 80
    protocol: TCP
    targetPort: 80
  - name: sidecar
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: account
    owner: tonyhhyip
    stage: beta
  type: ClusterIP
  clusterIP: None
