lab/account/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: account
    owner: tonyhhyip
  name: account-manager
spec:
  ports:
  - name: account
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: account
    owner: tonyhhyip
  type: ClusterIP
